# tui-sample-manager

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
config/: settings.toml
src/sample_manager/: __main__.py  cli.py  config.py  main.py
src/sample_manager/app/: router.py  tui.py  validators.py
src/sample_manager/db/: connection.py  migrate.py  rating_repository.py  sample_repository.py  tag_repository.py
src/sample_manager/db/migrations/: 001_initial_schema.sql  002_sample_directories.sql  003_add_bpm_to_samples.sql  004_add_hash_to_samples.sql  005_add_audio_analysis_columns.sql
src/sample_manager/scanner/: directories.py  file_scanner.py  indexer.py  metadata.py
src/sample_manager/utils/: audio_analysis.py  batch.py  hashing.py  logging.py  playback.py
src/tui_sample_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_reliability.py
tests/app/: test_directories.py  test_ratings.py  test_search.py  test_stats.py  test_tags.py  test_tui.py
tests/db/: test_duplicates.py  test_indexes.py  test_migration_idempotency.py  test_migrations.py  test_ratings.py  test_sample_tag_relationship.py  test_samples.py  test_tags.py
tests/scanner/: test_filesystem_integration.py
tests/utils/: test_audio_analysis.py  test_batch.py  test_playback.py
