[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tui-sample-manager"
version = "0.1.0"
description = "A terminal-based audio sample manager with advanced search, analysis, and playback."
authors = [
    { name = "Vinay Podar", email = "podar.vinay999@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "textual>=0.80.0",
    "librosa>=0.10.0",
    "numpy>=1.20.0",
    "scipy>=1.8.0",
    "soundfile>=0.12.0",
    "click>=8.0.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
sample-manager = "sample_manager.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_test_loop_scope = "function"
